No myn gedacht ister doa nog veel tekst in die e verwestvlamsieng is van 't AN. Veranderen of loaten? Biografie kat ook uutgebreider.

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -1,29 +1,29 @@
-'''blink 182''' (oorspronkeliek Blink genoamd) is ne punk-rock band ut San Diego, upgericht deur '''[[Mark Hoppus]]''' en '''[[Tom Delonge]]'''
+'''Blink 182''' (oorsprounkelie Blink genoamd) is ne punk-rock band ut San Diego, upgericht deur [[Mark Hoppus]] en [[Tom Delonge]].
+
+==Biografië==
+Den oorsprounkelikken drummer von Blink 182 heette [[Scott Raynor]].
+In et joar van hun album dad tmééste succes é gekregn, vloog in den tour Scott uit den band, em moest kiezn tusn stopn me Blink, of stoppn mé drinkn. Een beetje loater istem in een afkickcentrum beland. Mo in da befoamde joar 1999 zatn ze in de problemn, want ze an ginne drummer mer. Under goeie moat eeft dan in e mum van tied alle liedjes lern spelen en is me under op tour gegoan van hun album ''Enema of the states''. Die gast heette [[Travis Barker]]. Travis, die vroegere in de Aquabats speelde, heeft zyne band upgegeevn en is me Blink ip tour gegoan. Achter da album wos Blink ginne punkrock mer, mo eigenlijk veranderd no pop-punk.
+
+In 2005 wos [[Tom Delonge]] et e beetje beu, achter de uitgoave van under loatst gemoakte album. Ie vound da undere band Blink, nie genoeg was vo zn smoake. Utiendelik eeftij noa een concert zunne gsm nummere verandert en konden zyn beste moaten gin contact mer me em opnemn. 
+Ton eeft ton zelf ne band ipgericht genoamd "[[Angels And Airwaves]]" oftewel AvA afgekort.
+Noa de splitsinge en ook [[Mark Hoppus]] en [[Travis Barker]] hun eigene band ipgericht genoamd [[+44]] oftewelle Plus Forty Four, genoamd no de mobielnummere daj moe draaien vo 't [[Verenigd keuninkryk]]: 0044.
+Intusschn eeft Ava al 2 albums uitgebrocht, en Plus Forty Four enen.
 
 
-'''ex-bandleden'''
+==Bandleden==
+#[[Tom Delonge]] (gitarre)
+#[[Mark Hoppus]] (basse)
+#[[Travis Barker]] (drums)
 
-Den oorspronkelieken drummer von Blink 182 heette '''[[Scott Raynor]]'''.
-In et joar van hun album dad tmééste succes é gekregn, vloog in den tour Scott uit den band, em moest kiezn tusn stopn me blink, of stoppn mé drinkn. Een beetje loater istem in een afkickcentrum beland. Mo in da befoamde joar 1999 zatn ze in de problemn, want ze an ginne drummer mer. Under goeie moat eeft dan in mum van tied alle liedjes lern spelen en is me under op tour gegoan van hun album '''Enema of the states'''. Deze gast heette '''[[Travis Barker]]'''. Travis, die vroegere in de Aquabats speelde, heeft ziene band upgegevn en is me blink ip tour gegoan. Noa da album wos blink ginne punkrock mer, mo eigenlijk verandert no pop-punk.
-'''
-de bandleden'''
-#[[Tom Delonge]] (an de gitarre)
-#[[Mark Hoppus]] (an de basse)
-#[[Travis Barker]] (an de drums)
-'''
-Under cd's'''
-#Buddha (album in 95)
+==Discografië==
+
+# Buddha (album in 95)
 # Cheshire Cat (album, 1994)
 # Dude Ranch (album, 1997)
 # Enema of the State (album, 1999)
 # The Mark Tom and Travis Show (The Enema Strikes Back) (live-album, 2000)
 # Take off your Pants and Jacket (album, 2001)
-# Blink-182 (geen titel, album, 2003)
+# Blink-182 (gin titel, album, 2003)
 # Greatest Hits (verzamelalbum, 2005)
-'''
-d'echtschiedinge'''
 
-In 2005 wos [[Tom Delonge]] ut een beetje beu, no de uitgoave van under loatst gemoakte album in tweeduznd en vuve. Ie von da undere band blink, nie genoeg was vo zn smoake. Utiendeliek eeftij noa een concert zunne gsm nummere verandert en konden zien beste moaten gin contact mer me em opnemn. 
-Tom eeft ton zelf ne band ipgericht genoamd "[[Angels And Airwaves]]" oftewel AvA afgekort.
-Noa de splitsinge en ook [[Mark Hoppus]] en [[Travis Barker]] hun eigene band ipgericht genoamd [[+44]] oftewelle Plus Forty Four, genoamd no de mobielnummere daj moe draaien vo tverenigd koninkriek: 044.
-Intussn eeft Ava al 2 albums uitgebrocht, en plus 44 enen.
+[[Categorie:Muziek]]
