*Empty MediaWiki Message*

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -1,4 +1,4 @@
-'''Blink 182''' (oorsprounkelie Blink genoamd) is ne punk-rock band ut San Diego, upgericht deur [[Mark Hoppus]] en [[Tom Delonge]].
+'''Blink 182''' (oorsprounkelik Blink genoamd) is ne punk-rock band ut San Diego, upgericht deur [[Mark Hoppus]] en [[Tom Delonge]].
 
 ==Biografië==
 Den oorsprounkelikken drummer von Blink 182 heette [[Scott Raynor]].
