--- a/E3_Saxo_Bank_Classic.mw
+++ b/E3_Saxo_Bank_Classic.mw
@@ -55,6 +55,7 @@ De '''E3 Prys Vloandern''' is e [[vélokoerse|koers]]e voe [[coureur|profs]] mè
 * 2005 - [[Tom Boonen]] (Bel)
 * 2006 - [[Tom Boonen]] (Bel)
 * 2007 - [[Tom Boonen]] (Bel)
+* 2008 - [[Kurt-Asle Arvesen]] (Noo)
 |}
 
 ==Externe koppelienge==
