--- a/Travis_Barker.mw
+++ b/Travis_Barker.mw
@@ -1,2 +1,3 @@
+{{wiu}}
 '''Travis Barker''' is ne vree bekenden drummer.Ij speelde wok in'''[[ Blink 182]]''' an de drums.
 Loater eeftij Mark gevolgd en gejoined in [[+44]]
