*Empty MediaWiki Message*

--- a/Martin_De_Jonghe.mw
+++ b/Martin_De_Jonghe.mw
@@ -1,14 +1,15 @@
 [[Ofbeeldienge:Martindejonghe.gif|thumb|Martin De Jonghe in 't panel van De 3 Wijzen]]
-'''Martin De Jonghe''' ([[1948]]), radio- en tv-figuur, komiek.
+'''Martin De Jonghe''' ([[1948]]) is e radio- en tv-figuur en komiek.
 E wunt nu in [[Marke]] ([[Kortryk]]).
 
 Martin De Jonghe werktege van 1977 toet 1998 vaste by de [[BRT]] (nu VRT) as programmamoaker.
-E wos byvorbeeld de man achter TV-Touché ('t êeste satirische programma op de BRT), Golfbreker (e populair [[Radio 2]]-programma, live vanan de [[kust]]) e Service Telefoon.
+E wos byvorbeeld de man achter TV-Touché ('t êeste satirische programma op de BRT), Golfbreker (e populair [[Radio 2]]-programma, live vanan de [[kust]]) e Service Telefoon. E tourt nu ol ênigte joarn round mi zyn onemanshows.
 
-Bekende typetjes va nem zyn: 
+== Bekende typetjes ==
+Martin De Jonghe kan goed typische figuurn uutbeeldn:
 * Vercruusse (van Radio Deprimo in Klaproosters op Radio 2)
 * Boer Boer (in 't Boereparlement tope mi [[Jo De Meyere]])
-* Lucien van achter 't Nieuws (op [[WTV]] en [[Focus]], de regionoale zenders van [[West-Vloandern]]).
+* Lucien van achter 't Nieuws (op [[WTV]] en [[Focus]]): Lucien trok deur de [[West-Vloandern|West-Vlamsche]] gemêentn en prochies, en e bekêek d'actualiteit terplekke deur zyn eigen bril.
 
 ==Externe koppeliengn==
 *[http://www.martindejonghe.be Zyn website]
