--- a/Martin_De_Jonghe.mw
+++ b/Martin_De_Jonghe.mw
@@ -1,4 +1,4 @@
-[[Ofbeeldienge:Martindejonghe.gif|thumb|Martin De Jonghe in 't panel van De 3 Wijzen]]
+[[Ofbeeldienge:Martindejonghe.gif|thumb|Martin De Jonghe in 't panel van De 3 Wijzen, een amusementsprogramma van de VRT]]
 '''Martin De Jonghe''' ([[1948]]) is e radio- en tv-figuur en komiek.
 E wunt nu in [[Marke]] ([[Kortryk]]).
 
