*Empty MediaWiki Message*

--- a/Burg_(Brugge).mw
+++ b/Burg_(Brugge).mw
@@ -1,5 +1,5 @@
-[[Image:Brugge - Waterhalle 1294 - 1787.jpg|thumb|right|300px|De Burg in 1294 mè links de Sint-Donaaskathedroale]] 
-De '''Burg''' is ‘t pling woa dat de geschiedenisse van Brugge begost is. 
+[[Image:Brugge - Waterhalle 1294 - 1787.jpg|thumb|right|300px|De Burg an de riviere de Reie mè links de Sint-Donaaskathedroale]] 
+De '''Burg''' is ‘t pling woa dat de geschiedenisse van Brugge begost is. De riviere de Reie strôomde deur Brugge en is nu hêlegans gekanaliseerd.
 ==Geschiedenisse==
 [[843]] was ’n importent joar vor Europa. Deur ‘t [[Verdrag van Verdun]] wierd ’t Ryk van [[Karel den Grôotn]] verdêeld ounder z’n drie klêenkinders. [[Karel den Kletsn]] krêeg  [[West-Francië]] (à peu près [[Frankryk]] en [[Vloandern]]).
 
@@ -8,7 +8,7 @@ Je zound [[Boudewyn I van Vloandern|Boudewyn met den Yzern Oarm]] noa de Vloande
 Uut de Vloanderngouwe groeide ‘t [[Groafschap Vloandern]], woavan da Boudewyn I den eestn groaf was.
 
 De Vikings droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn.
-Ze kostn met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere Reie, (woa dat de noame van de reitjes van komt) tout in Brugge voarn, wa dat in dien tyd (vó de grôte overstromienge van de 12e eeuwe) ollene meugelik was met ôog woater. Ze noemdn die platse ''Bryghia'' wat dat in under toale ''anlegplatse'' wilde zeggn. Vô de Vikings teegn t'oudn liet Boudewyn met den Yzern oarm round 864 ‘n versterkte burcht bouwn ip de plekke woa da nu de Burg is.  
+Ze kostn met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie, (woa dat de noame van de reitjes van komt) tout in Brugge voarn, wa dat in dien tyd (vó de grôte overstromienge van de 12e eeuwe) ollene meugelik was met ôog woater. Ze noemdn die platse ''Bryghia'' wat dat in under toale ''anlegplatse'' wilde zeggn. Vô de Vikings teegn t'oudn liet Boudewyn met den Yzern oarm round 864 ‘n versterkte burcht bouwn ip de plekke woa da nu de Burg is.  
 
 Brugge groeide round de burcht van de groavn van Vloandern. ’t Was in dien tyd groafelik gebied (nie stedelik) en dus under privébezit.
 
@@ -26,6 +26,7 @@ D’[[Illig-Bloedbasiliek]] is ’n dubbelkapelle mè beneen de Romoansche Sint-
 ’t Is ‘t enigste gebouw dat overgebleevn is van den tyd dat de groafelikkn burcht ip ’t Burgpling stound. ’t Interieur van de dounkere crypte in de beneenkapelle is bewoard gebleevn en ‘t is e schôon vôorbeeld van de [[Romoanschn styl]]. ’t Is ’t oudste gebouw van Brugge. In de boovnkapelle van ’t Illig-Bloed, is ’t romoans karakter verloorn gegoan. In de 15e eeuwe is ’t erbouwd gewist in gotischn styl en in de 19e eeuwe is ‘t neo-gotisch verbouwd gewist. De relikwie van ’t [[Illig Bloed]] wordt doa bewoard en ieder joar meegedroagn in d'[[Illig-Bloedprocessie]]. De noame steeghere, [[Middelnederlands]] vo den trap noa de boovnkapelle uut 1548,  leeft voort deurdat de passage mè winkeltjes noa de wullestroate ''Ten Steeghere'' genoemd is.
 
 ==’t Staduus==
+[[Ofbeeldienge:StadhuisBrugge.jpg|thumb|’t Staduus]]
 Links van de basiliek stoat ’t [[Gotiek|gotisch]] staduus. D’n êestn stêen is geleid in 1376 deur groaf [[Lodewyk van Male]]. ’t Is êen van d’oudste staduuzn van de Nederlandn. In de vôorgevel uut de 14e eeuwe stoan d’r 49 beeldn van figeurn uut d’n bybel en de geschiedenisse van Vloandern. Ip ‘t eeste verdiep ku je de Gotische zoale bezoekn. ‘t Outn anggewelf dateert uut 1402 en de neogotische meurschilderiengn uut d’n tyd van ’t istorisch romantisme, end 19e eeuwe. In d’istorische zoale zyn d’r schilderyen, documentn en zoakn die in verband te bringn zyn met de geschiedenisse van Brugge.
 Neffest ’t staduus, ounder de boge, lopt ’t Blind-Ezelstratje, genoemd noar ’n erberge van in d’n tyd.
 
