+[[ja:ブリュッセル首都圏地域]]

--- a/Brussels_Oofdstedelik_Gewest.mw
+++ b/Brussels_Oofdstedelik_Gewest.mw
@@ -69,6 +69,7 @@ Deur an der menschn van overol up de weireld in 't Brusselsche weunn, zyn der st
 [[fr:Région de Bruxelles-Capitale]]
 [[id:Daerah Ibu Kota Brussel]]
 [[it:Regione di Bruxelles-Capitale]]
+[[ja:ブリュッセル首都圏地域]]
 [[ka:ბრიუსელი (რეგიონი)]]
 [[ksh:Brüßßel (Regijon)]]
 [[la:Regio Bruxellarum Capitis]]
