Stive Vermaut Memorial

--- a/Stive_Vermaut.mw
+++ b/Stive_Vermaut.mw
@@ -6,6 +6,8 @@ In de [[Tour de France]] van 2001, et 'n schône dingn etoogd. En attakkeerde di
 
 Achter dat ze in 2002 een angeboorn artafwykienge by em vaststeldn, es 't ie gestopt me koersn. Achter een ounderzoek van specialistn in [[Amerika]] eit ie nog een korte come-back gemakt in [[2003]]. Moar ton dat ie weer probleemn kreeg es 't ie begonnen me een fietszoake. Ip [[13 juni]] [[2004]] es 't ie in coma gerakt deur nen artstilstand en iets loater es 't ie ton gestorven.
 
+De [[Omloop van de Westhoek]], e wedstryd vo eliterenners zounder contract en beloftn, noemn ze nu ouk Memorial Stive Vermaut.
+
 == Zyn ploegn ==
 * 1997: Vlaanderen 2002 - Eddy Merckx (sedert 1 september; stagiair)
 * 1998: Vlaanderen 2002 - Eddy Merckx 
