--- a/Keiem.mw
+++ b/Keiem.mw
@@ -23,7 +23,7 @@ Ton da beist den [[Êeste Weireldoorloge]] de sluuzn in Nieuwpoort woarn open ge
 <br clear=left/>
 
 ==Bekende Keiemnoarn==
-*[[Michel Pollentier]]: ex-coureur
+*[[Michel Pollentier]]: ex-[[coureur]]
 *[[Andy Cappelle]]: coureur
 
 [[Categorie:Diksmude]]
