koerst Vansevenant nog eigentlik?

--- a/Wim_Vansevenant.mw
+++ b/Wim_Vansevenant.mw
@@ -1,4 +1,4 @@
-'''Wim Vansevenant''' ([[Diksmude]], [[23 december]] [[1971]]) es nen [[West-Vloandern|West-Vlamsche]] coureur. 't Es nen typieschn elper, y wint zelve nie vele, moar y es van goudweirde vo zynen kopman.
+'''Wim Vansevenant''' ([[Diksmude]], [[23 december]] [[1971]]) es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. 't Es nen typieschn elper, y wint zelve nie vele, moar y es van goudweirde vo zynen kopman.
 
 ==Carrière==
 Wim Vansevenant es prof gekoomn in [[1995]], by [[Vlaanderen 2002 - Eddy Merckx]]. Y es doa vier joar by gebleevn, doarachter volgdn korte contractn by [[Collstrop]], [[Farm Frites]], [[Mercury]] en [[Palmans - Collstrop]]. Vanof [[2003]] es't y by de [[Predictor - Lotto|Lotto]] ploeg gekoomn en y es doar gebleevn. 
