koppelieng na "coureur"

--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -1,4 +1,4 @@
-'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] coureur. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van't moment. 't Es wel (nog) ginne veelwinnoare.
+'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van't moment. 't Es wel (nog) ginne veelwinnoare.
 
 ==Carrière==
 Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryn. 
