--- a/Leif_Hoste.mw
+++ b/Leif_Hoste.mw
@@ -3,7 +3,7 @@
 |}
 {{plat|Kortryks}}
 
-'''Leif Hoste''' ([[Kortryk]], [[17 juli]] [[1977]]) is nen [[België|Belgischen]] coureur die nu in [[Maldegem]] weunt, moar ipgegroeid is in [[Boaviekove]]. 
+'''Leif Hoste''' ([[Kortryk]], [[17 juli]] [[1977]]) is nen [[België|Belgischen]] [[coureur]] die nu in [[Maldegem]] weunt, moar ipgegroeid is in [[Boaviekove]]. 
 
 Hoste is surtout gekend lik e goein tydrydr (en is ol Belgisch kampioen, by de profs en by de jeugd), moar ie kan ôok goe mee in de mêeste vôorjoarsklassiekers. Ie es by d'echte toppers gereeknd sedert zyn twêedde plekke in de [[Rounde van Vloandern]] va 2004 (achter 'n [[Duutsland|Duuts]] [[Steffen Wesemann]]). 
 Ie koste ip de sympathie van hêel Vloandern rekenn toen dat ie in 2007 vo den derde kêe twêdde wos in de Rounde, achter Ballan.
@@ -19,7 +19,7 @@ Ie koste ip de sympathie van hêel Vloandern rekenn toen dat ie in 2007 vo den d
 ==Palmares==
 Echte grôte overwinniengn et Hoste nog nie goald, moar en is olglik ol ne kêe Belgisch Kampioen tydryn gewist en ie eit ol de [[Driedoagse van De Panne]] gewonn.
 
-Ie es vodder ol 3 kêers 'n twêedn gewist in de [[Rounde van Vloandern]] ([[2004]], [[2006]] en [[2007]]) en en et ol dichte endigt in koersn lik [[Kuurne-Brussel-Kuurne]] en [[E3 Prys Vloandern|E3 Prys van Oarelbeke]].
+Ie es vodder ol 3 kêers 'n twêedn gewist in de [[Rounde van Vloandern]] ([[2004]], [[2006]] en [[2007]]), en en et ol dichte endigt in koersn lik [[Kuurne-Brussel-Kuurne]] en [[E3 Prys Vloandern|E3 Prys van Oarelbeke]].
 
 ==Incidentn==
 *In 2004 eit ie vele zoagienge gèd omdat ie Dave Bruylandts gon oaln et in de latste kilomeiters van de Rounde van Vloandern en ezo Wesemann in e zetel no de mete brochte.
