--- a/Jef_Demuysere.mw
+++ b/Jef_Demuysere.mw
@@ -1,5 +1,5 @@
 [[Ofbeeldienge:Jef_Demuysere.jpg|thumb|right|Jef Demuysere]]
-'''Jef Demuysere''' ([[Wervik]], [[26 juli]] [[1907]] - [[Antwerpn]], [[30 april]] [[1969]]) wos nen bekendn [[West-Vloandern|West-Vlamschn]] coureur in de joarn '20 en '30 van de 20e eeuwe.
+'''Jef Demuysere''' ([[Wervik]], [[26 juli]] [[1907]] - [[Antwerpn]], [[30 april]] [[1969]]) wos nen bekendn [[West-Vloandern|West-Vlamschn]] [[coureur]] in de joarn '20 en '30 van de 20e eeuwe.
 
 Demuysere wos nen echt [[flandrien]]. In zeevn joarn tyd reed y vier keers de [[Rounde van Vrankryk]] en ook vier keers de [[Rounde van Itoalië]] uut.
 
