/* Uutsloagn competitie */  Der zien erger diengn in't leven; 2-7 bv. :-s

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -171,6 +171,8 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 | 26 || style="text-align:left;" | '''Club Brugge''' - FC Brussels || 1 - 0 || 54 || 2
 |-
 | 27 || style="text-align:left;" | '''FC Dender''' - Club Brugge || 1 - 0 || 54 || 2
+|-
+| 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 3
 |}
 <sup>*</sup>Mats uutgesteld van 't slicht weer
 
