--- a/Dries_Vanhegen.mw
+++ b/Dries_Vanhegen.mw
@@ -1,4 +1,4 @@
-{{beg}}'''Dries Vanhegen''' ([[Oostende]], [[8 juli]] [[1967]]) is e [[West-Vloandern|West-Vlamschn]] acteur, regisseur en scenarioschryver. En is byn de menschn surtout ekend erocht deur zyn rolln in ''Ex-Drummer'' (film van Koen Mortier), ''Sarah'' (telenovelle van [[VTM]]) en ''De Wet volgens Milo'' (advocoatnserie up VTM), oloewel dat ’n egliek bekender is in [[Olland]], woa dat ’n lange ewrocht et.
+{{beg}}'''Dries Vanhegen''' ([[Ostende]], [[8 juli]] [[1967]]) is e [[West-Vloandern|West-Vlamschn]] acteur, regisseur en scenarioschryver. En is byn de menschn surtout ekend erocht deur zyn rolln in ''Ex-Drummer'' (film van Koen Mortier), ''Sarah'' (telenovelle van [[VTM]]) en ''De Wet volgens Milo'' (advocoatnserie up VTM), oloewel dat ’n egliek bekender is in [[Olland]], woa dat ’n lange ewrocht et.
 
 ==Upleidienge en werk==
 
@@ -11,3 +11,6 @@ Over zyn privé en wult ’n nie vele zeggn, ollêne dat ’n e menage et en dat
 ==Films==
 *Emergo! (Beekman, 1998)
 *Ex-Drummer (Mortier, 2007)
+
+[[Categorie: West-Vlamschen acteur|Vanhegen, Dries]]
+[[Categorie: Regisseur|Vanhegen, Dries]]
