--- a/Dries_Vanhegen.mw
+++ b/Dries_Vanhegen.mw
@@ -14,3 +14,4 @@ Over zyn privé en wult ’n nie vele zeggn, ollêne dat ’n e menage et en dat
 
 [[Categorie: West-Vlamschen acteur|Vanhegen, Dries]]
 [[Categorie: Regisseur|Vanhegen, Dries]]
+[[Categorie: Ostende|Vanhegen, Dries]]
