*Empty MediaWiki Message*

--- a/Gerrit_Major.mw
+++ b/Gerrit_Major.mw
@@ -1,4 +1,4 @@
-'''Gerrit Major''' ([[Brugge]], [[4 ogustus|4 augustus]] [[1980]]) is een [[West-Vloandern|Westvlamsche]] [[basket|basketter]] die ipgegroeid is in [[Ostende]]. Je speelt in [[nationale basketcompetitie 2007-2008|1e nationale]] ip de guardpositie en j’ is 1.86 m grôot. 
+{{beg}}'''Gerrit Major''' ([[Brugge]], [[4 ogustus|4 augustus]] [[1980]]) is een [[West-Vloandern|Westvlamsche]] [[basket|basketter]] die ipgegroeid is in [[Ostende]]. Je speelt in [[nationale basketcompetitie 2007-2008|1e nationale]] ip de guardpositie en j’ is 1.86 m grôot. 
 ==Clubs==
 *1997-2005: Telindus Oostende (D1)
 *2005-2007: Dexia Mons-Hainaut (D1)
