--- a/Andrei_Tchmil.mw
+++ b/Andrei_Tchmil.mw
@@ -1,10 +1,10 @@
-'''Andrei Tchmil''' ([[22 januoari]] [[1963]] in Khabarovsk (toene Sovjet-Unie, nu Moldoavië)) is overtyd koereur ewist. En is buutn Rus, oek Oekraïener en Moldoavïer ewist. In 1998 is 'n toene Belg ekomn. Voen [[België]] et 'n in Plouay in [[Vrankryk]] bykan 't weireldkampioenschap ewonn, juuste vôorn de mete en ze nem epakt en [[Romans Vainsteins]] (e [[Letland|Let]]) wos toene weireldkampioen.
+'''Andrei Tchmil''' ([[22 januoari]] [[1963]] in Khabarovsk (toune Sovjet-Unie, nu Moldoavië)) is in 'n tyde koereur ewist. En is buutn Rus, oek Oekraïener en Moldoavïer ewist. In 1998 is 'n toene Belg ekomn. Voen [[België]] et 'n in Plouay in [[Vrankryk]] bykan 't weireldkampioenschap ewonn, juuste vôorn de mete en ze nem epakt en [[Romans Vainsteins]] (e [[Letland|Let]]) kwaam toune weireldkampioen.
 
-Tchmil wos setoe goed at 'n nie ol te vele oemoge gienk, e wos bykan ossan goed in de Vlamsche koersn, woa dat 'n mêestol êen van de grotste concurrentn wos van [[Johan Museeuw]]. En et de twêe Vlamsche klassiekers (de [[Rounde van Vloandern]] en [[Paris-Roubaix]]) ewonn.
+Tchmil wos surtout goed at 'n nie ol te vele omoge gienk, e wos bykan ossan goed in de Vlamsche koersn, woa dat 'n mêestol êen van de grotste concurrentn wos van [[Johan Museeuw]]. En et de twêe Vlamsche klassiekers (de [[Rounde van Vloandern]] en [[Paris-Roubaix]]) ewonn.
 
-In 2002 is 'n estopt achter dat 'n gin contract mi krêeg by Lotto. En adde ze boovnbêen ebrookn in de [[Driedoagse van De Panne]]. En is toene nog werekêerd in de [[Rounde van België]], woa dat 'n de latsn rit wonne en ezô ze carrière schône kuste ofsluutn.
+In 2002 is 'n estopt achter dat 'n gin contract mi krêeg by Lotto. En adde ze boovnbêen ebrookn in de [[Driedoagse van De Panne]]. En is toune nog werekêerd in de [[Rounde van België]], woa dat 'n de latsn rit wonne en ezô ze carrière schône kuste ofsluutn.
 
-Achter dat 'n estopt wos me koersn, is 'n oundermêer ploegleider ewist by [[Chocolade Jacques]]. In 2006 is 'n minister van sport ekomn in Moldoavië, zounder mei te doen met de verkieziengn.
+Achter dat 'n estopt wos me koersn, is 'n oundermêer ploegleider ewist by [[Chocolade Jacques]]. In 2006 is 'n minister van sport ekommn in Moldoavië, zounder mei te doen met de verkieziengn.
 
 ==Êrelyste==
 ===Klassiekers===
