--- a/Alexander_Poesjkin.mw
+++ b/Alexander_Poesjkin.mw
@@ -93,6 +93,7 @@ Achter de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen v
 [[Categorie: Nieuwstn tyd|Poesjkien, Alexander]]
 [[Categorie: Russische schryver|Poesjkin Alexander]]
 [[Categorie: Russische dichter|Poesjkin Alexander]]
+[[Categorie:Wikipedia:Bofartikel]]
 
 [[am:አሌክሳንደር ፑሽኪን]]
 [[ar:ألكسندر بوشكين]]
