--- a/Krachtbal.mw
+++ b/Krachtbal.mw
@@ -1,13 +1,13 @@
 == Geschiedenisse ==
 
-'''Krachtbal''' is e balsport da gespild wor mé 2 ploegn va 4 person'n. De sport is uutgevoen'n deur [[Etienne Schotte]], toen dat ie leeroare was an 't VTI in [[Brugge]]. In 1962 wer'n d'eerste wedstriedn gespild. 
+'''Krachtbal''' is e bolsport da gespild wor mé 2 ploegn va 4 persoonn. De sport is uutgevounn deur [[Etienne Schotte]], toun dat ie leroare was an 't VTI in [[Brugge]]. In 1962 wern d'eerste wedstrydn gespild. 
 
 == 't Spel ==
 
-'T pling bestoat uut e carré (van 26 in de lengte ip 14 meters in de britte) met an weerszydn e doelgebied (van nog e ki 6 meters). Tis de bedoelinge da je de bolle in 't doelgebied van jen tegenstander krygt in maximoale 3 of 4 worpen (afhankelik van de categorieje). Dien dat de meeste puntn scoort in 2 kis 25 minuten et gewoenen. De bolle weegt 1 toe 4 kilo (afhankelik van de categorieje). 
+'t Pling bestoat uut e carré (van 26 in de lengte ip 14 meters in de bridte) met an weerszydn e doelgebied (van nog e ki 6 meters). 't Is de bedoelinge da je de bolle in 't doelgebied van jen tegenstander krygt in maximoale 3 of 4 worpen (afhankelik van de categorieje). Dien dat de meeste puntn scoort in 2 kis 25 minuten, et gewounn. De bolle weegt 1 toe 4 kilo (afhankelik van de categorieje). 
 
 == Ploegn ==
-Krachtbal wordt in de [[Vloandern|Vloanders]] 't meejst gespild in [[West-Vloandern]] omda ze da doar ên uutgevoundn. 
+Krachtbal wordt in de [[Vloandern|Vloanders]] 't mêest gespild in [[West-Vloandern]]. 
 Vo de moment is [[Frankryk]] de weireldkampioen.
 
 == Koppeliengn ==
