*Empty MediaWiki Message*

--- a/Sint-Jozef_(Ooglee).mw
+++ b/Sint-Jozef_(Ooglee).mw
@@ -1,9 +1,9 @@
-'''Sint Jozef''' of '''De Gêette''' (De Geite) is e [[gehucht]] in de [[België|Belgische]] gemeente [[Ooglee]]. 't Gehuchtje ligt tusschn [[Kortemark]] en [[Stoan]]. 't Et mo twêe stroatn en ne wyk en zyn eign [[parochje]], genoemd noa den [[heilige Jozef]]. 
+{{beg}}'''Sint Jozef''' of '''De Gêette''' (De Geite) is e [[gehucht]] in de [[België|Belgische]] gemeente [[Ooglee]]. 't Gehuchtje ligt tusschn [[Kortemark]] en [[Stoan]]. 't Et mo twêe stroatn en ne wyk en zyn eign [[parochje]], genoemd noa den [[heilige Jozef]]. 
 
 Ge kunt er de bekende Gêettetoartn koopn, e sôorte confituretoartn. 
 
 [[Omer Karel De Laey]] is up de Gêette gebôorn.
-{{beg}}
+
 
 [[Categorie: Ooglee]]
 [[Categorie: Plekke in West-Vloandern]]
