--- a/Ooglee.mw
+++ b/Ooglee.mw
@@ -41,7 +41,7 @@
 |- align="center" bgcolor="#CCCCCC"
 ! # !! Naam !! Oppervlakte<br/><small>(km²)</small>!! Bevolking <br/><small>(31/12/2006)</small>
 |- align="right" bgcolor="#efefef"
-|I <br /> &nbsp; <br/><small>(III)</small><br /><small>(IV)</small>|| align="left" | Ôoglee <br /> - Ôoglee<br />- [[Sleioage]] <br /> - [[De Gête]] || 22,00 <br/> &nbsp;<br/> &nbsp; <br/> &nbsp; || 5.713 <br/> &nbsp;<br/> &nbsp; <br/> &nbsp;
+|I <br /> &nbsp; <br/><small>(III)</small><br /><small>(IV)</small>|| align="left" | Ôoglee <br /> - Ôoglee<br />- [[Sleioage]] <br /> - [[Sint-Jozef (Ooglee)|De Gête]] || 22,00 <br/> &nbsp;<br/> &nbsp; <br/> &nbsp; || 5.713 <br/> &nbsp;<br/> &nbsp; <br/> &nbsp;
 |- align="right"
 |II || align="left" | [[Gits]] || 15,83 || 4.151
 |}
