"oes land" is tout noader order nog ossan West-Vloandern :-)

--- a/Vliegpling_van_Frankfurt.mw
+++ b/Vliegpling_van_Frankfurt.mw
@@ -1,4 +1,4 @@
-'''Frankfurts Vliegpling''' (Duuts: ''Flughafen Frankfurt am Main ook Rhein-Main Flughafen'', Ingels: ''Frankfurt Airport'') is den officielen noame van 't [[vliegpling]] van [[Frankfurt]]. 'n Is geleegn in de provinsje [[Hessen]]. 't Es 't grotste vliegpling van oes [[Duutsland|land]]. Ge kunt et vliegpling bereikn bijvoorbeeld vanuut Frankfurt, [[Berlyn]], [[Köln]], [[München]], [[Hamburg]], [[Amsterdam]], [[Brussel]], [[Weenn]], [[Zürich]] met de tring. Er is en ottostroade (''Autobahn'') tot an 't vliegpling. 
+'''Frankfurts Vliegpling''' (Duuts: ''Flughafen Frankfurt am Main ook Rhein-Main Flughafen'', Ingels: ''Frankfurt Airport'') is den officielen noame van 't [[vliegpling]] van [[Frankfurt]]. 'n Is geleegn in de provinsje [[Hessen]]. 't Es 't grotste vliegpling van [[Duutsland]]. Ge kunt et vliegpling bereikn bijvoorbeeld vanuut Frankfurt, [[Berlyn]], [[Köln]], [[München]], [[Hamburg]], [[Amsterdam]], [[Brussel]], [[Weenn]], [[Zürich]] met de tring. Er is en ottostroade (''Autobahn'') tot an 't vliegpling. 
 {{beg}}
 
 ==Ofbeeldiengn==
