--- a/Jacques_Offenbach.mw
+++ b/Jacques_Offenbach.mw
@@ -2,6 +2,7 @@
 
 '''Jacques Offenbach''' ([[20 juni]] [[1819]] - [[5 oktober]] [[1880]]) was ‘n Duutschn componist. Je speeldeg orgel, clavecimbel en viole.
 
+{{beg}}
 [[Categorie:Duutsche componist]]
 
 [[ast:Jacques Offenbach]]
