*Empty MediaWiki Message*

--- a/Jacques_Offenbach.mw
+++ b/Jacques_Offenbach.mw
@@ -1,6 +1,6 @@
 [[Ofbeeldienge:JacquesOffenbach.jpg|150px|thumb|Jacques Offenbach]]
 
-'''Jacques Offenbach''' ([[20 juni]] [[1819]] - [[5 oktober]] [[1880]]) was ‘n Duutschn componist. Je speeldeg orgel, clavecimbel en viole.
+'''Jacques Offenbach''' ([[20 juni]] [[1819]] - [[5 oktober]] [[1880]]) was ‘n [[Duutsland|Duutschn]] componist. Je speeldeg orgel, clavecimbel en viole.
 
 {{beg}}
 [[Categorie:Duutsche componist]]
