dorp van de ronde 2008

--- a/Bellegem.mw
+++ b/Bellegem.mw
@@ -25,6 +25,8 @@
 
 Der zyn twêe brouweryn: [[Bockor]] en [[Facon]]. Bellegem es redelik euvelachtig, in tegenstellinge tot de reste van Kortryk en eit ôok een [[bus]], iet da redelik zeldzoam es in de wydere omgevinge.
 
+Bellegem ligt vanboven ip ne heuvelkam zodoanig da je noa boven moe ryen a je noa de kerke toe rydt - surtout kommnde van de kantn van Rollegem.  Bellegem is "Het dorp van de Ronde" in de Rounde van Vloandern 2008.
+
 ==Bekende Bellegemnoarn==
 * [[Germain Derijcke]], ex-coureur
 * [[Willy Bocklandt]], ex-coureur
