--- a/De_Moern_(Vrankryk).mw
+++ b/De_Moern_(Vrankryk).mw
@@ -28,6 +28,7 @@ In [[1620]] es [[Wenceslas Cobergher]] der in gesloagd om 3000 ectoare were te w
 
 {{Patrôon:GemêentnDKK}}
 
+[[br:De Moeren]] 
 [[fr:Les Moëres (Nord)]]
 [[it:Les Moëres]]
 [[nl:De Moeren (Frankrijk)]]
