[[fr:Mandel (rivière)]]

--- a/Mandel.mw
+++ b/Mandel.mw
@@ -14,4 +14,5 @@ In de twintiste êeuwe is de riviere gedêeltelik overwelfd geroakt. Ollesis in 
 
 [[ca:Mandel]]
 [[en:Mandel River]]
+[[fr:Mandel (rivière)]]
 [[nl:Mandel (rivier)]]
