*Empty MediaWiki Message*

--- a/Dêelstoat_(Duutsland).mw
+++ b/Dêelstoat_(Duutsland).mw
@@ -11,7 +11,7 @@
 #[[Ofbeeldienge:Flag of Hesse.svg|25px]] [[Essen]] (''Hessen'')
 #[[Ofbeeldienge:Flag of Mecklenburg-Western Pomerania.svg|25px]] [[Mecklenburg-Voor-Pommern]] (''Mecklenburg-Vorpommern'')
 #[[Ofbeeldienge:Flag of Lower Saxony.svg|25px]] [[Nedersaksn]]  (''Niedersachsen'') 
-#[[Ofbeeldienge:Flag of North Rhine-Westphalia.svg|25px]] [[Noord-Rynland-Westfoaln]] (''Nordrhein-Westfalen'') 
+#[[Ofbeeldienge:Flag of North Rhine-Westphalia.svg|25px]] [[Noordreyn-Westfoaln]] (''Nordrhein-Westfalen'') 
 #[[Ofbeeldienge:Flag of Rhineland-Palatinate.svg|25px]] [[Rynland-Palts]] (''Rheinland-Pfalz'') 
 #[[Ofbeeldienge:Flagge Saarland.PNG|25px]] [[Saarland]] 
 #[[Ofbeeldienge:Flag of Saxony.svg|25px]] [[Saksn]] (''Sachsen'') 
