--- a/Bernard_Lietaer.mw
+++ b/Bernard_Lietaer.mw
@@ -1,4 +1,4 @@
-'''Bernard Lietaer''' ([[Leuven]], [[1942]]) is nen [[België|Belgische]] [[econoom]]. Hij was president van de [[Centroale Bank van België]]. Ze noemn nem e specialist in ''alternative valuta''. Lietaer is een echtn globetrotter. E doceerde ounder ander 3 joar an 'n unief van Berkeley in [[Californië]].
+'''Bernard Lietaer''' ([[Lauwe]], [[1942]]) is nen [[België|Belgische]] [[econoom]]. Hij was president van de [[Centroale Bank van België]]. Ze noemn nem e specialist in ''alternative valuta''. Lietaer is een echtn globetrotter. E doceerde ounder ander 3 joar an 'n unief van Berkeley in [[Californië]].
 
 ==Boekn==
 *'t Geld van de toekomst
