--- a/E3_Saxo_Bank_Classic.mw
+++ b/E3_Saxo_Bank_Classic.mw
@@ -68,6 +68,7 @@ Den dag achter den E3, de zundag, is 't ie ôok olle joare georganiseerd vo de w
 [[de:E3-Preis Flandern]]
 [[en:E3 Prijs Vlaanderen]]
 [[fr:Grand Prix E3]]
+[[it:Gran Premio E3 Harelbeke]]
 [[ja:E3プライス・フラーンデレン]]
 [[lb:E3 Prijs Vlaanderen]]
 [[nl:E3 Prijs Vlaanderen]]
