*Empty MediaWiki Message*

--- a/Chantal_Pattyn.mw
+++ b/Chantal_Pattyn.mw
@@ -1,7 +1,7 @@
 '''Chantal Pattyn''' ([[Wienkel]]) es begonn als radioreporter, êest by [[Studio Brussel]], woar da ze vôorol kultuurprogramma's presenteerde, en ton by [[Klara]]. Z'eit ôok ne kortn tyd [[de zevende dag]] gepresenteerd ip één. Sedert 2005 stoa ze mee an de leidienge van [[Klara]] en presenteert ze gin programma's ne mêe.
 
 ==Carrière==
-*1990 - [[2000]] (Studio Brussel): Update, Frituur Victoria, BasSta, De Nachten
+*[[1990]] - [[2000]] (Studio Brussel): Update, Frituur Victoria, BasSta, De Nachten
 *[[1998]]- [[2000]] (één): De zevende dag
 *[[2000]] - [[2005]] (Klara): Alinea
 *[[1 september]] [[2005]] - nu: adjunct netôofd Klara
