--- a/Bernard_Lietaer.mw
+++ b/Bernard_Lietaer.mw
@@ -1,4 +1,4 @@
-'''Bernard Lietaer''' ([[Lauwe]], [[1942]]) is nen [[België|Belgische]] [[econoom]]. Hij was president van de [[Centroale Bank van België]]. Ze noemn nem e specialist in ''alternative valuta''. Lietaer is een echtn globetrotter. E doceerde ounder ander 3 joar an 'n unief van Berkeley in [[Californië]].
+'''Bernard Lietaer''' ([[Lauwe]], [[1942]]) is nen [[België|Belgischn]] [[econoom]]. Ie wos president van de [[Centroale Bank van België]]. Ze noemn nem e specialist in ''alternative valuta''. Lietaer is een echtn globetrotter. E doceerde ounder ander 3 joar an 'n unief van Berkeley in [[Californië]].
 
 ==Boekn==
 *'t Geld van de toekomst
@@ -7,7 +7,7 @@
 *[http://www.youtube.com/watch?v=vjYDhuLWUnE Bernard Lietaer vo e NHK Japan documentaire ip complementaire geld systemen] en [[Silvio Gesell]]
 *[http://home.hccnet.nl/pbl.smit/lietaer.html Soamenvatting '' 't Geld van de toekomst'']
 
-[[Categorie:Economie]]
+[[Categorie:Economie|Lietaer, Bernard]]
 
 [[cs:Bernard Lietaer]]
 [[de:Bernard A. Lietaer]]
