/* Bekende Toeroetnoars */ +Peter Vandermeersch

--- a/Toeroet.mw
+++ b/Toeroet.mw
@@ -85,13 +85,14 @@ Toeroet is bekend vo zyne goeie [[mostaard]]: '''t Wostyntje'''<ref>http://www.m
 * Groenhove bus is a vree schoon gebied voe te wandeln en voe met de vélo te ryn.
 
 ==Bekende Toeroetnoars==
-* [[Dirk Tanghe]]: regisseur en toneelmoaker, sinds [[1996]] artistiek directeur van de Paardenkathedraal, et professioneel theoatergezelschap van [[Utrecht]]
-* [[Jozef Verhaeghe (1927)|Jozef Verhaeghe]]: directeur ip ruste van 't VTI 
-* [[Eugène Van Oye]]: docteur, dichter, tonêelschryver, flamingant
+* [[Brahim]]: zanger
+* [[Maaike Cafmeyer]]: artiest (actrice, zangeresse...)
 * [[Hilde Crevits]]: politica
 * [[Herr Seele]]: pianostemmer, têkenoare,...
-* [[Brahim]]: zanger
-* [[Maaike Cafmeyer]]: etwien van ip dn tv
+* [[Dirk Tanghe]]: regisseur en toneelmoaker, sinds [[1996]] artistiek directeur van de Paardenkathedraal, et professioneel theoatergezelschap van [[Utrecht]]
+* [[Peter Vandermeersch]]: hoofdredacteur van [[De Standaard]]
+* [[Eugène Van Oye]]: docteur, dichter, tonêelschryver, flamingant
+* [[Jozef Verhaeghe (1927)|Jozef Verhaeghe]]: directeur ip ruste van 't VTI 
 * [[André Vermeulen]]: dien tiep van ip tv, van Eurosong en ol.
 
 ==Referenches==
