*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -60,7 +60,7 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 * 'n Antrekkelik [[strange]] met een lengte van 3,3 km. In de zomer kun je cabientjes, ligzetels en parasols euren. D'r zyn ook vintn die roundgoan met bakkn crème glace of met e  plateau [[Boule de Berlin|Boule de L'Yser]]s. Je kunt z' owren roepn van in de verte. Ook ip den dyk van 2 km lank valt er vanalles te beleevn.
 * De jachtoavn, de vroegere visschersoavn van Blanknberge is uutgebouwd tout 'n moderne jachtoavn met 1000 ligplatsn.
 * De twi estacades (staketsels) woa dat de voargeule tusschen lopt. Ze zyn vernield gewist deur de Duutschers ip 't ende van [[Twiddn Weireldoorloge|WO2]] en volledig erbouwd. 't Owsterstaketsel begun joaren 1950 in out en 't westerstaketsel begun joaren '70 in betong.
-* De [[Cazjeno]] woa dat ook 't cultureel centrum oundergebrocht is. De stad Blanknberge et drie "kruupnde baby 's" van [[David Černý]] ([[Beaufort (kunsthappenienge)|Beaufort 2006]]) angekocht. Ze kruupn nu ip de cazjeno. 
+* De [[Casino (Blanknberge)|Cazjeno]], cultureel centrum.
 * De [[Paravang]], een sierlik bouwsel uut de [[Belle-Epoque]]-periode.
 *[[Art Nouveau (Blanknberge)|Art Nouveau]] 
 * 't [[Monument van Lippens en De Bruyne]] ip den dyk.
@@ -141,12 +141,12 @@ Je ziet ze van alle kantn komn noa ‘t strange. In ’t oogsizoen legt de NMBS 
 * [[Atletiek]]: Atletiek Club Blankenberge
 * [[Basket]]: Fantasia Blankenberge 
 * [[Tennis]]: Tennisclub Blankenberge
-* [[Turnen]]: Kon.T.V. “Rust Roest” Blankenberge vzw 
+* Turnen: Kon.T.V. “Rust Roest” Blankenberge vzw 
 * [[Voetbal]]: K.Sporting Club Blankenberge
-* [[Zeilen]]: Scarphout Yachtclub 
-* [[Zwemmen]]-[[Woaterpolo]]: Blankenbergse zwemvereniging
-* [[Karate]] : Karateclub Zendokan Blankenberge
-* [[Jiu-jitsu]] : Jiu-jitsu Blankenberge: [http://www.jiu-jitsu-blankenberge.be Website]
+* Zeilen: Scarphout Yachtclub 
+* Zwemmen-Woaterpolo: Blankenbergse zwemvereniging
+* Karate: Karateclub Zendokan Blankenberge
+* Jiu-jitsu: Jiu-jitsu Blankenberge: [http://www.jiu-jitsu-blankenberge.be Website]
 
 ==Openboar vervoer==
 *[[Stoatie van Blanknberge]]
@@ -181,7 +181,7 @@ Oefeninge: 'k Stoan mè m'n ein bein in de zeie. 'k Koopn e growt browd by de ba
 Een Blanknbergenoare noemt Blanknberge: "uus steedje".
 
 == Varia ==
-Blanknberge is vereiwigd in e kluchtig liedje van [[Hugo Matthysen]]. E poar zinnetjes:<br>
+Blanknberge is vereiwigd in e kluchtig liedje van Hugo Matthysen. E poar zinnetjes:<br>
 ::''Blankenberge Blankenberge, wonderschone stad <br>
 ::''Ik wou dat ik in m'n achtertuin zo'n Blankenberge had''<br>
 ::''Blankenberge Blankenberge, parel aan de kust''<br>
