--- a/Leo_Van_Paemel.mw
+++ b/Leo_Van_Paemel.mw
@@ -2,32 +2,32 @@
 [[Ofbeeldienge: Leo 021-1-.jpg|thumb|Jachtoaven van Zêebrugge. Olieverve ip doek. 1975]]
 [[Ofbeeldienge: Leo 025-1-.jpg|thumb|<center>Outskooltêkeninge. 1978]]
 [[Ofbeeldienge: Leo Van Paemel-Portret Mike.jpg|right|thumb|<center>Kinderportret. Olieverve ip doek. 1979]]
-'''Leo Van Paemel''' ([[Blanknberge|Blanknberge]] [[15 januoari]] [[1914]] - [[Brugge]] [[28 januoari]] [[1995]]) was een [[West-Vloandern|West-Vlamsche]] kunstschilder. 
+'''Leo Van Paemel''' ([[Blanknberge]], [[15 januoari]] [[1914]] - [[Brugge]], [[28 januoari]] [[1995]]) was een [[West-Vloandern|West-Vlamsche]] kunstschilder. 
 ==Leven==
 Leo Van Paemel is geboren in Blanknberge tegoare me z'n twillingbroere Willy. Je verteldege zelve dat 'n altyd getêkend et vo zoverre dat 'n z'n kinderjoarn koste erinnern. D'r bestoan nog têkeningen van em gemakt in [[Lissewege]], [[Uutkerke]] en Blanknberge van [[1927]]. Je was ton 13 joar oud. Als lêerling van de RMS in Blanknberge mocht 'n z'n Nederlandsche ipstellen met eigen têkeningen illustreern. Die werksjes wierdn ton uutg'angn ip de overdekte speelplatse. Die steun ip schole was een duwtje in de goeie richtinge moa nie den ênigstn stimulans. Je vergezelde geregeld z'n nounkel Jules, die ton nog schilderde, deur 't polderlandschap round Uutkerke, Lissewege, [[Zuunkerke]] of [[Dizzêle]]. Doar et Leo Van Paemel z'n êeste lessen in 't schildern gekreegn. 
 
-Loater et 'n gestudeerd an de Keuninklike Academie vo Schône Kunstn in [[Antwerpn]] van [[1929]] tout [[1934]] en wierd doa verschillnde kêren bekrôond. In 't êeste joar an den academie krêegt’n al een êeste prys en d’r volgdn d’r nog vele. 
+Loater et 'n gestudeerd an de Keuninklike Academie vo Schône Kunstn in [[Antwerpn]] van [[1929]] tout [[1934]] en wierd doa verschillige kêren bekrôond. In 't êeste joar an den academie krêegt’n al een êeste prys en d’r volgdn d’r nog vele. 
 
 In 1934 ist’n achter een exoamn toegeloatn an ‘t  Nationaal Hoger Instituut vo Schône Kunstn in Antwerpn woa dat 'n tout [[1940]] een deur [[Isidoor Opsomer]] styf geweirdeerd lêerling was.
 
-Je was een generoatiegenôot van Jan Cox, Jack Godderis, René de Coninck, Mark Macken, Mark Mendelson, Luc De Jaegher en Luc Peire, moa j'is een totaal eigen weg gegoan. Leo Van Paemel was een persôonlike vertolker van de [[Nôordzêe]] en alles wat d'rmee verband oudt: 't strandleven, de sfeer ip de zêedyk, de gezellige drukte in de visschers-en jachtoaventjes, de [[Polders]]...Je schilderde ook in [[Vrankryk|Frankryk]] ([[Provence]], [[Normandië]], [[Bretagne]]), [[Ingeland]] ([[Lancashire]]), en [[Olland]]. Z'n specialiteit was wel 't schilderen van portretfigeurn. J'is 't er in gesloagd een moderne interpretoatie te geevn an een klassiek genre, met de techniek van d'oude mêesters.
+Je was een generoatiegenôot van Jan Cox, Jack Godderis, René de Coninck, Mark Macken, Mark Mendelson, Luc De Jaegher en Luc Peire, moa j'is een totaal eigen weg gegoan. Leo Van Paemel was een persôonlike vertolker van de [[Nôordzêe]] en alles wat d'rmee verband oudt: 't [[strange]]leven, de sfeer ip de zêedyk, de gezellige drukte in de visschers-en jachtoaventjes, de [[Polders]]...Je schilderde ook in [[Vrankryk|Frankryk]] ([[Provence]], [[Normandië]], [[Bretagne]]), [[Ingeland]] ([[Lancashire]]), en [[Olland]]. Z'n specialiteit was wel 't schilderen van portretfigeurn. J'ist er in gesloagd een moderne interpretoatie te geevn an een klassiek genre, met de techniek van d'oude mêesters.
 
 In [[1942]] - [[1946]] ad 'n z'n atelier in [[Brussel]]. In 1946 kwamt 'n were noa Blanknberge. Vanof de joaren '60 et 'n ton van de kunst z'n beroep gemakt. 
 
-In [[1968]] is 't 'n noa [[Brugge]] goan weunn woa dat 'n z'n atelier ad vlak by d'alletorre. J'is ook in Brugge gestorvn moa je ligt begroavn in Blanknberge lik dat 'n 't altyd zelve gewild et.
+In [[1968]] ist 'n noa [[Brugge]] goan weunn woa dat 'n z'n atelier ad vlak by d'alletorre. J'is ook in Brugge gestorvn moa je ligt begroavn in Blanknberge lik dat 'n 't altyd zelve gewild et.
 
 ==Werk==
 *Prentnkabinet van de Keuninklike Bibliotheke, Brussel
 *Museum, [[Ostende (stad)|Ostende]]
 *Geprimeerd in de vuufjoarlikse Prys vo Schilderkunst van de Provincie [[West-Vloandern]] ([[1950]])
-*Schilderien in Stads-en Stoatsbezit
+*Schilderyen in Stads-en Stoatsbezit
 *Vier van de grôte officiële portrettn van Blanknbergsche burgemêesters in de fêestzoale van 't staduus in Blanknberge: L.Nuytemans (1961), G.Dhondt (1962), M.Devriendt (1964), S.Declerq (1995)
-*Won de Grand Prix du Président ip de joarlikse tentôonstellinge van de Académie Internationale des Arts Contemporains in Enghien (Edingen) ([[1989]])
-*Retrospectieve tentôonstellinge georganiseerd deur 't Stadsbestier van Blanknberge in 't Stedelik Casino: "Leo Van Paemel 75 jaar"
+*''Grand Prix du Président'' gewonn ip de joarlikse tentôonstellinge van de Académie Internationale des Arts Contemporains in Enghien (Edingen) ([[1989]])
+*Retrospectieve tentôonstellinge georganiseerd deur 't Stadsbestier van Blanknberge in 't [[Casino (Blanknberge)|Stedelik Casino]]: "Leo Van Paemel 75 jaar"
 *Festival international de peinture d' Aix en Provence (1991)
 *Privé verzoamelingn in [[België]], Olland, Ingeland, Frankryk, [[Duutsland]], [[Canada]] en de [[Amerika|Verênigde Stoatn]]
 ==Varia==
-* De etser [[Jules Van Paemel]] was z'n noenkel.
+* De etser [[Jules Van Paemel]] was z'n nounkel.
 * D'r is een monografie over em geschreevn deur de Brugsche schryver Paul Vanderschaeghe met foto's van z'n werk: "Leo Van Paemel, verheerlijker van leven".
 
 [[Categorie: West-Vlamsche kunstschilder|Van Paemel, Leo]]
