--- a/David_Černý.mw
+++ b/David_Černý.mw
@@ -5,7 +5,7 @@
 Černý is een creatieve rebel, nie allene deur zyn rockstarimago in Tsjechië, moa surtout deur zyn provoceernde kunst. Zyn satirische en confrounteernde beeldn bekritiseern de kunstweireld en de soamnlevienge. 
 Je makte al kunst vo [[1989]], moa toch wordt zyn werk meestal in verband gebrocht met ’t volksfeest dat uutbrak achter de val van ‘t Yzeren Gordyn. Je schilderde azo een [[Rusland|Russischn]] tank in ’t roze. D’r volgde ton groot protest.
 
-Ip [[Beaufort (kunsthappenienge)|Beaufort 2006]] woarn Černý’s “Baby’s’’ te zien round de casino van [[Middelkerke]]. [http://afentoeeenfoto.skynetblogs.be/post/3289561/beaufort--david-cerny-babys]J’aad ze gemakt vo “Praag, culturele hoofdstad 2000". In 2007 et de stad [[Blanknberge]] drie baby’s angekocht. Ze kruupn nu ip de casino.
+Ip [[Beaufort (kunsthappenienge)|Beaufort 2006]] woarn Černý’s “Baby’s’’ te zien round de casino van [[Middelkerke]]. [http://afentoeeenfoto.skynetblogs.be/post/3289561/beaufort--david-cerny-babys]J’aad ze gemakt vo “Praag, culturele hoofdstad 2000". In 2007 et de stad [[Blanknberge]] drie baby’s angekocht. Ze kruupn nu ip de [[Casino (Blanknberge)|casino]].
 
 Neffest beeldouwn oudt Černý em ook bezig me cultureel activisme, filmen en technomuziek.
 
