*Empty MediaWiki Message*

--- a/Jacques_Offenbach.mw
+++ b/Jacques_Offenbach.mw
@@ -1,9 +1,10 @@
 [[Ofbeeldienge:JacquesOffenbach.jpg|150px|thumb|Jacques Offenbach]]
 
-'''Jacques Offenbach''' ([[20 juni]] [[1819]] - [[5 oktober]] [[1880]]) was ‘n [[Duutsland|Duutschn]] componist. Je speeldeg orgel, clavecimbel en viole.
+'''Jacques Offenbach''' ([[Keuln]], [[20 juni]] [[1819]] - [[Parys]], [[5 oktober]] [[1880]]) was ‘n [[Vrankryk|Franschn]] componist en cellist van [[Duutsland|Duutsche]] ofkomste.
 
 {{beg}}
-[[Categorie:Duutsche componist]]
+[[Categorie:Fransche componist|Offenbach, Jacques]]
+[[Categorie:Duutsche componist|Offenbach, Jacques]]
 
 [[ast:Jacques Offenbach]]
 [[bar:Jacques Offenbach]]
