*Empty MediaWiki Message*

--- a/5_oktober.mw
+++ b/5_oktober.mw
@@ -4,6 +4,7 @@
 *[[1987]] - [[Sjoukje Dufoer]]
 
 ==Gestorvn==
+*[[1880]] - [[Jacques Offenbach]]
 *[[1918]] - [[Roland Garros]]
 
 [[Categorie:Datum]]
