*Empty MediaWiki Message*

--- a/1880.mw
+++ b/1880.mw
@@ -5,6 +5,8 @@
 ==Overleedn==
 ;juni
 *[[23 juni|23]] - [[Albrecht Rodenbach]]
+;oktober
+*[[5 oktober|5]] - [[Jacques Offenbach]]
 
 [[Categorie:1880-1889]]
 
