*Empty MediaWiki Message*

--- a/Vliegpling_van_Frankfurt.mw
+++ b/Vliegpling_van_Frankfurt.mw
@@ -1,9 +1,11 @@
-'''Frankfurts Vliegpling''' (Duuts: ''Flughafen Frankfurt am Main ook Rhein-Main Flughafen'', Ingels: ''Frankfurt Airport'') is den officielen noame van 't [[vliegpling]] van [[Frankfurt]]. 'n Is geleegn in de provinsje [[Hessen]]. 't Es 't grotste vliegpling van [[Duutsland]]. Ge kunt et vliegpling bereikn bijvoorbeeld vanuut Frankfurt, [[Berlyn]], [[Köln]], [[München]], [[Hamburg]], [[Amsterdam]], [[Brussel]], [[Weenn]], [[Zürich]] met de tring. Er is en ottostroade (''Autobahn'') tot an 't vliegpling. 
+‘t '''Vliegpling van Frankfurt''' (Duuts: ''Flughafen Frankfurt am Main ook Rhein-Main Flughafen'', Ingels: ''Frankfurt Airport'') es ’t grotste vliegpling van [[Duutsland]] en ’t derde grotste van [[Europa]].
+
+'t Is geleegn in ’t zuud-westn van [[Frankfurt|Frankfurt am Main]] in de deelstoat [[Hessen]]. Ge kunt et vliegpling bereikn met de tring. Er is en autostrade (''Autobahn'') tot an 't vliegpling. 
 {{beg}}
 
 ==Ofbeeldiengn==
 <gallery>
-Ofbeeldienge:AirportFrankfurt fromair.jpg|Luchtfoto van de Vliegpling van Frankfurt
+Ofbeeldienge:AirportFrankfurt fromair.jpg|Luchtfoto van 't Vliegpling van Frankfurt
 Ofbeeldienge:Flughafen Frankfurt am Main.JPG|Vlieger ip de startboane
 </gallery>
 
