--- a/Phaedra_Hoste.mw
+++ b/Phaedra_Hoste.mw
@@ -4,7 +4,8 @@
 
 ==Carrière==
 * Van stiel is ze fotomodel (o.a. by ''New Models Agency''). Z'eed ooit e proces angedoan om ''[[Menzo]]'' uut de rekkn van de gazettewienkels t'oalen, omda ze nie wilde dat eur foto's gepubliceerd wiern.
-* Mediafigeure: presentoatie en meedoen in verschillende TV-programma's: De Juiste Prijs (VTM), Vliegende start ([[TV1]]), Swingpaleis (TV1), Mediamadammen ([[VT4]]), Let's Dance (VT4) en Wie wordt de man van Phaedra (VTM), woa da ze zoekt achter e [[vint]].
+* Mediafigeure: presentoatie en meedoen in verschillende TV-programma's: De Juiste Prijs (VTM), Vliegende start ([[TV1]]), Swingpaleis (TV1), Mediamadammen ([[VT4]]), Let's Dance (VT4)
+* In ''Wie wordt de man van Phaedra?'' (VTM), zoekt ze achter e [[vint]]. Achter zestien weekn e ze gekoozn voun Pascal, e keirel uut Deurne byn [[Antwerpen]].
 * Societyfiguur: ol eur liaisons woarn mè bekende vintn: [[Paul Okon]], [[Roger De Vlaeminck]], [[Pieter Loridon]] ... 
 * Politica in de gemêentepolletiek van Brugge vo de [[CD&V]], mo dat e nie lange gedeurd.
 * Z'eed eur name gegeevn an de Phaedra Hoste foundation die tracht Belgen t'elpen die in de miserie zittn.
