--- a/Tachtigjoarign_Oorlog.mw
+++ b/Tachtigjoarign_Oorlog.mw
@@ -13,7 +13,7 @@ In 1567, achter de [[Beeldnstorm]], zound Filips d’n ertog van Alva als landvo
 *1580: Filips II belooft 25.000 guldn en vereffinge in d’n oadelstand vo wien da Willem van Oranje vermoordt. Oranje verdedigt em  in ‘n  verkloaringe, de Apologie, waarin dat ‘n  de trouw aan de Spoansche keunink ipzegt.
 *1581: [[Plakkaat van Verlatinghe]], de officiële verkloarienge van neegn van de [[Zeventien Provinciën]] dan ze Filips II nie langer erkenn lik under vorst. Eigentlik wos dat en ounofankelikeidsverkloarienge.
 *1584: Willem van Oranje wordt vermoord in Delft deur Balthazar Gerards, ’n fanatiekn katholiek.
-*1585: [[Val van Antwerpn]]. Veroveringe van Antwerpen deur de Spoansche troepn ounder [[Alexander Farnese]] (zeune van de landvoogdes Margareta van Parma), met als gevolg ’n massavlucht van de culturele elite no ’t Noordn.
+*1585: [[Val van Antwerpn]]. Veroveringe van Antwerpen deur de Spoansche troepn ounder [[Alexander Farnese]] Ik heb zin in krokketeen jy ook ik lkkr wel hahaahahah grappigg kartman (zeune van de landvoogdes Margareta van Parma), met als gevolg ’n massavlucht van de culturele elite no ’t Noordn.
 *1588: De Stoatn-Generoal van de noordelikke provinciën decideern vo 't land zelve te goan besteurn. De [[Republiek der Zeevn Verenigde Provinciën]], ofwel de Republiek, es geboorn.
 *1598: Dood van Filips II. De Nederlandn kommn in andn van z’n dochter [[aartsertoginne Isabella|Isabella]], getrouwd  mè aartsertog [[Albrecht van Oostnryk]].
 *1609 - 1621: Twoalfjoarig bestand: woapnstilstand tusschn de Noordelikke - en de [[Zudelikke  Nederlandn]].
