*Empty MediaWiki Message*

--- a/Dikkebus.mw
+++ b/Dikkebus.mw
@@ -32,11 +32,11 @@ Dikkebus is mêer of Dikkebus ollêne. Oek 't gehucht 'n [[Krommenelst]] (dat up
 'n Postnumerô is 8900 ('t zeste lik [[Yper]] en [[Sient-Jan (Yper)|Sient-Jan]]), mo 't is oek nog 8904 (nu van [[Boezienge|Boezieng]]) ewist. E post is er ol lange nemê, deur centraliezoasche moetn de Dikkebusnoars ol stief lange nor Yper goan. In 't oud gebouw van 'n post zit de KSA nu.
 
 == Geschiedenisse ==
-Ze zeggn dat Dikkebus êest e joagersutje wos in de busschn oender Yper. De noame komt van 'dikke' (dichte) en 'bus' (struukn of troenkn). De betêkenisse van de noame is nu wel hêlegans weg, want vele boomn en stoan der nemê.
+By da 't schynt wos Dikkebus êest e joagersutje in de busschn oynder Yper. De noame komt van 'dikke' (dichte) en 'bus' (struukn of troenkn). De betêkenisse van de noame is nu wel hêlegans weg, want vele boomn en stoan der nemê.
 
 D'êeste gebouwn in Dikkebus woarn êentige klôosterweuniengn in 1072.
 
-De vyver is volgens de [[legende]] en ofdruk van de botte van e reuze (en et de vorme van e schoe) en deur 't ofkloppn van die botte, is 'n [[Kemmelberg]] ountstoan. Eigentlik is 'n geweune ountstoan deurda poaters uut [[Vormezêle]] de Kemmelbeke ofedamd en.
+De vyver is voogns de [[legende]] en ofdruk van de botte van e reuze (en et de vorme van e schoe) en deur 't ofkloppn van die botte, is 'n [[Kemmelberg]] ountstoan. In 't echt is 'n ountstoan deurda poaters uut [[Vormezêle]] de Kemmelbeke ofedamd enn.
 
 In [[Êeste Weireldoorloge|Êestn Weireldôorloge]] is bykan olles kapot eschootn.
 
@@ -48,7 +48,7 @@ In [[Êeste Weireldoorloge|Êestn Weireldôorloge]] is bykan olles kapot eschoot
 *'''Dikkebus Kerremesse''': up 't ende va juni is 't de noamfêeste van Sient-Jan 'n Doper en dus oek kerremesse in Dikkebus. Buutn 'n droaimeuln, e vis- en e schietkroam, zyn der oek nog e mass' aar diengn te doen.
 *'''[[Sinte-Moarten]]''': 'n [[11|efsn]] [[november]] gift Sinte-Moartn speelbucht en sneukelienge an de joenges. 'n Oavend dervôorn is 't er oek e stoet. De jounges loopn toune me koebêetn med e keise in, deur de stroatn ('t zyn oek nog e poar zystroatn en wykn) van Dikkebus, achter Sinte-Moartn, Zworte Piet en 't meziek. De garde lopt ossan vanachtern.
 *'''Kestmart''': in december goat de kestmart deure up de grôte boane, olle verênigiengn en commerçantn kunn doa stoan met e kroamtje. 
-*'''Kestboomverbrandieng''': lik in veel aar parochies, is 't er oek in Dikkebus in 't begun van januoari e kestboomverbrandieng, woa dan de kestboomn van up de platse en van byn de menschn tuus upebrand groakn. Vaneiges is er toune oek wel e gloazetje edrounkn.  
+*'''Kestboomverbrandieng''': lik in veel aar parochies, is 't er oek in Dikkebus in 't begun van januoari e kestboomverbrandieng, woa dan de kestboomn van up de platse en van byn de menschn tuus upebrand groakn. Vaneigns is er toune oek wel e gloazetje edrounkn.  
 
 == Verênegiengn ==
 === Jeugd ===
