*Empty MediaWiki Message*

--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -1,29 +1,30 @@
-{{wiu}}'''Blink 182''' (oorsprounkelik Blink genoamd) is ne punk-rock band ut San Diego, upgericht deur [[Mark Hoppus]] en [[Tom Delonge]].
+'''Blink 182''' (oorsprounkelik Blink genoamd) es ne punk-rock band uut [[San Diego]], upgericht deur [[Mark Hoppus]] en [[Tom Delonge]] in [[1991]].
 
-==Biografië==
-Den oorsprounkelikken drummer von Blink 182 heette [[Scott Raynor]].
-In et joar van hun album dad tmééste succes é gekregn, vloog in den tour Scott uit den band, em moest kiezn tusn stopn me Blink, of stoppn mé drinkn. Een beetje loater istem in een afkickcentrum beland. Mo in da befoamde joar 1999 zatn ze in de problemn, want ze an ginne drummer mer. Under goeie moat eeft dan in e mum van tied alle liedjes lern spelen en is me under op tour gegoan van hun album ''Enema of the states''. Die gast heette [[Travis Barker]]. Travis, die vroegere in de Aquabats speelde, heeft zyne band upgegeevn en is me Blink ip tour gegoan. Achter da album wos Blink ginne punkrock mer, mo eigenlijk veranderd no pop-punk.
+==Biografie==
+Den oorsprounkelikkn drummer von Blink 182 noemde [[Scott Raynor]].
+In et joar van hun album dad tmééste succes a gekreegn, vloog in den tour Scott uut den band, em moest kiezn tussn stopn me Blink, of stopn me drienkn. E bitje loater estem in e afkickcentrum beland. Mo in da befoamde joar 1999 zoatn ze in de probleemn, want ze an gin drummer mêer. Under goeie moat i ton in e mum van tyd alle liedjes lêern speeln en es me under ip tour gegoan van hun album ''Enema of the state''. Die gast noemde [[Travis Barker]]. Travis, die vroegere in The Aquabats speelde, a zyn band upgegeevn en es me Blink ip tour gegoan. Achter da album wos Blink ginne punkrock mêer, mo eignlyk veranderd noar pop-punk.
 
-In 2005 wos [[Tom Delonge]] et e beetje beu, achter de uitgoave van under loatst gemoakte album. Ie vound da undere band Blink, nie genoeg was vo zn smoake. Utiendelik eeftij noa een concert zunne gsm nummere verandert en konden zyn beste moaten gin contact mer me em opnemn. 
-Ton eeft ton zelf ne band ipgericht genoamd "[[Angels And Airwaves]]" oftewel AvA afgekort.
-Noa de splitsinge en ook [[Mark Hoppus]] en [[Travis Barker]] hun eigene band ipgericht genoamd [[+44]] oftewelle Plus Forty Four, genoamd no de mobielnummere daj moe draaien vo 't [[Verenigd keuninkryk]]: 0044.
-Intusschn eeft Ava al 2 albums uitgebrocht, en Plus Forty Four enen.
+In 2005 wos Tom Delonge et e bitje beu, achter de uutgoave van under loatst gemoakte album. Ie vound da undere band Blink, nie genoeg was vo zin smoake. Uutiendelik i tie agter een concert zunne gsm nummere verandert en koestn zyn beste moatn gin contact mêer me em ipneemn. 
+Tom i ton zelf nen band ipgericht genoamd "[[Angels And Airwaves]]" oftewel AvA afgekort.
+Noa de splitsinge in ôok Mark Hoppus en Travis Barker uldern eign band ipgericht genoamd [[+44]] oftewel Plus Forty Four, genoamd no de mobielnumero daj moe droain vo 't [[Verênigd Keunienkryk]]: 0044.
+Intusschn i Angels And Aiwaves al 2 albums uutgebrocht, en Plus Forty Four êenn.
 
 
-==Bandleden==
-#[[Tom Delonge]] (gitarre)
-#[[Mark Hoppus]] (basse)
-#[[Travis Barker]] (drums)
+==Bandleedn==
+* [[Tom Delonge]] (gitoare)
+* [[Mark Hoppus]] (bas)
+* [[Travis Barker]] (drums)
 
-==Discografië==
+==Discografie==
 
-# Buddha (album in 95)
-# Cheshire Cat (album, 1994)
-# Dude Ranch (album, 1997)
-# Enema of the State (album, 1999)
-# The Mark Tom and Travis Show (The Enema Strikes Back) (live-album, 2000)
-# Take off your Pants and Jacket (album, 2001)
-# Blink-182 (gin titel, album, 2003)
-# Greatest Hits (verzamelalbum, 2005)
+* Flyswatter (demo, 1992)
+* Buddha (album, 1995)
+* Cheshire Cat (album, 1994)
+* Dude Ranch (album, 1997)
+* Enema of the State (album, 1999)
+* The Mark Tom and Travis Show (The Enema Strikes Back) (live-album, 2000)
+* Take off your Pants and Jacket (album, 2001)
+* Blink-182 (gin titel, album, 2003)
+* Greatest Hits (verzamelalbum, 2005)
 
 [[Categorie:Muziek]]
