--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -1,3 +1,4 @@
+[[Ofbeeldienge:Blink182.jpg|thumb|right|Blink182 me Tom DeLonge, Mark Hoppus en Travis Barker (van links nor reks)]]
 '''Blink 182''' (oorsprounkelik Blink genoamd) es ne punk-rock band uut [[San Diego]], upgericht deur [[Mark Hoppus]] en [[Tom Delonge]] in [[1991]].
 
 ==Biografie==
