--- a/Blink-182.mw
+++ b/Blink-182.mw
@@ -26,6 +26,6 @@ Intusschn i Angels And Aiwaves al 2 albums uutgebrocht, en Plus Forty Four êenn
 * The Mark Tom and Travis Show (The Enema Strikes Back) (live-album, 2000)
 * Take off your Pants and Jacket (album, 2001)
 * Blink-182 (gin titel, album, 2003)
-* Greatest Hits (verzamelalbum, 2005)
+* Greatest Hits (verzoamelalbum, 2005)
 
 [[Categorie:Muziek]]
